Let the CUPS Raster output device generate RGBW as defined in the CUPS documentation

The CUPS Raster output device ("cups") has an RGBW output color
space. This was intended to produce standard RGB plus an extra channel
which marks true black pixels by being 0 and for all non-black pixels
having all bits set to 1. This mode is designed to control the use of
black ink or toner for black text in printed documents.

The RGBW output of Ghostscript's CUPS Raster output device was
actually inverted CMYK, an RGBW which is known to be used by
projectors.

The HPLIP printer drivers worked around this bug being able to
understand both modes correctly and so printouts on HP printers were
correct before, too, but we need to follow the documentation of CUPS,
so that if other printer manufacturers/driver developers make use of
the RGBW mode get correct results.

This finally fixes bug 691922.

CUPS documentation:

http://www.cups.org/documentation.php/doc-1.5/spec-raster.html

Section: Pixel Value Coding, CUPS_CSPACE_RGBW